# POTATO

./: .gitignore  AGENTS.md  CODEX_SRTH_V1_IMPLEMENTATION_README.md  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: e1_1_residual.yaml  e1_2_rollback.yaml  e1_transformer.yaml  srth_v1.yaml
docs/: E1_1_IMPLEMENTATION_SPEC.md  E1_2_CODEX_TASK.md  E1_2_IMPLEMENTATION_SPEC.md  E1_IMPLEMENTATION_SPEC.md  SRTH_V1_IMPLEMENTATION_SPEC.md
scripts/: check_srth_cuda_env.py  e12_oracle_ap_audit.py  make_toy_cache.py  srth_v1_smoke.py  validate_cache.py
src/potato_e1/: __init__.py  arbitration.py  dataset.py  e11_arbitration.py  e11_dataset.py  e11_losses.py  e11_model.py  e12_arbitration.py  e12_dataset.py  e12_losses.py  e12_model.py  e12_targets.py  evaluate.py  evaluate_e11.py  evaluate_e12.py  losses.py  model.py  schema.py  search_e11.py  search_e12.py  targets.py  train.py  train_e11.py  train_e12.py
src/potato_srth/: __init__.py  external.py  losses.py  routing.py  targets.py
tests/: test_e11_residual.py  test_e11_targets.py  test_e12_rollback.py  test_model_shapes.py  test_srth_v1.py  test_targets_arbitration.py
